--- a/02-basic-types/index.html
+++ b/02-basic-types/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>01-getting-started</title>
+    <title>02-typescript-basics</title>
     <link rel="stylesheet" type="text/css" href="./app.css" />
     <script src="./app.js" defer></script>
   </head>
